Fix for Chromium/skia's implementation of canvas's isPointInPath(). https://bugs.webkit.org/show_bug.cgi?id=30402

Reviewed by David Levin.

Covered by LayoutTests/fast/canvas/pointInPath.html.

* platform/graphics/skia/SkiaUtils.cpp:
(WebCore::SkPathContainsPoint):



Canonical link: https://commits.webkit.org/41133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49673 268f45cc-cd09-0410-ab3c-d52691b4dbfc